@@ -14,6 +14,7 @@ phpMyAdmin - ChangeLog
 - bug [display] Added missing icons in original theme
 - bug #3516761 [edit] Query error after search
 - bug #3516405 [display] Chart title is getting wrong within chart export
+- bug #3517021 [interface] Header links except 'More' hide after closing dialog
 
 3.5.0.0 (2012-04-07)
 + rfe #2021981 [interface] Add support for mass prefix change.
